[project]
name = "chatbot_api"
version = "0.1"

dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.110.0",
    "langchain==0.1.16",
    "langchain-openai==0.1.3",
    "langchainhub==0.1.15",
    "neo4j==5.14.1",
    "numpy==1.26.2",
    "openai==1.31.0",
    "opentelemetry-api==1.22.0",
    "pydantic==2.5.3",
    "uvicorn==0.29.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]
