[project]
name = "chatbot_api"
version = "0.1"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-openai==0.2.2",
    "openai>=1.57.0",
    "langchainhub==0.1.15",
    "neo4j==5.14.1",
    "numpy==1.26.2",
    "opentelemetry-api==1.22.0",
    "pydantic>=2.7,<3.0"   # 🔑 Allow FastAPI + OpenAI + LangChain to agree
]
